--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,9 +67,21 @@ a {
 
 
 .upload-zone-wrapper {
-      position: absolute;
+    position: absolute;
     bottom: 0;
     width: 100%;
     background-color: #fff;
-    height: 100px;
 }
+.upload-zone-wrapper .drop-box {
+    width: 100%;
+    height: 20px;
+    text-align: center;
+    font-size: 1em;
+    opacity: .2;
+}
+.drop-box.dragover {
+    opacity: .7;
+    color: #419941;
+    height: 100px;
+    font-size: 3em;
+  }
